evaluation/rq1/sota/mythril/execution_logs/0x0xaa################################CE297_bsc.txt
The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

The analysis was completed successfully. No issues were detected.

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xaa################################CE297_bsc/@uniswap/lib/contracts/libraries/TransferHelper.sol:25:34: ParserError: Expected ';' but got '{'
        (bool success,) = to.call{value:value}(new bytes(0));
                                 ^

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

ParserError: Source "@sphynxswap/sphynx-swap-lib/contracts/token/BEP20/BEP20.sol" not found: File not found.
 --> ./PoCShift/contract_inspection/0xaa################################CE297_bsc/contracts/who_core/WHOToken.sol:4:1:
  |
4 | import "@sphynxswap/sphynx-swap-lib/contracts/token/BEP20/BEP20.sol";
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xaa################################CE297_bsc/@sphynxswap/sphynx-swap-lib/contracts/token/BEP20/BEP20.sol:67:34: ParserError: Expected '{' but got reserved keyword 'override'
    function getOwner() external override view returns (address) {
                                 ^------^

mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xaa################################CE297_bsc/@sphynxswap/sphynx-swap-lib/contracts/access/Ownable.sol:27:5: SyntaxError: No visibility specified. Did you intend to add "public"?
    constructor() {
    ^ (Relevant source part starts here and spans across multiple lines).

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

ParserError: Source "solidity_lib/Time/time.sol" not found: File not found.
 --> ./PoCShift/contract_inspection/0xaa################################CE297_bsc/library/LWHO.sol:3:1:
  |
3 | import 'solidity_lib/Time/time.sol'; // 
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

./PoCShift/contract_inspection/0xaa################################CE297_bsc/library/V2Library/UniswapV2Library.sol:6:1: ParserError: Source "@sphynxswap/sphynx-swap-lib/contracts/math/SafeMath.sol" not found: File not found.
import "@sphynxswap/sphynx-swap-lib/contracts/math/SafeMath.sol";
^---------------------------------------------------------------^

mythril.interfaces.cli [ERROR]: Solc experienced a fatal error.

ParserError: Source "solidity_lib/Time/time.sol" not found: File not found.
 --> ./PoCShift/contract_inspection/0xaa################################CE297_bsc/library/LWHO.sol:3:1:
  |
3 | import 'solidity_lib/Time/time.sol'; // 
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


mythril.interfaces.cli [ERROR]: input files do not contain any valid contracts
